--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -33,7 +33,8 @@ jobs:
           source .venv/bin/activate
           python app.py
           rm -rf *.json
-          mv export.csv/*.csv export.csv
+          mv export.csv/ out/
+          mv out/*.csv export.csv
         env:
           GRANT_TYPE: ${{ secrets.GRANT_TYPE }}
           CLIENT_ID: ${{ secrets.CLIENT_ID }}
