--- a/.github/workflows/update_data.yml
+++ b/.github/workflows/update_data.yml
@@ -31,6 +31,7 @@ jobs:
       - name: Update data
         run: |
           source .venv/bin/activate
+          rm -rf *.csv
           python app.py
           rm -rf *.json
           mv export.csv/ out/
